Updated to .NET Core / EntityFrameworkCore 2.1.1 Added movie/tv counts

--- a/Source/AmazonPrimeVideoSearch/AmazonPrimeVideoSearch/appsettings.json
+++ b/Source/AmazonPrimeVideoSearch/AmazonPrimeVideoSearch/appsettings.json
@@ -1,5 +1,11 @@
 ﻿{
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\;Database=AWSPrimeStreaming;Trusted_Connection=True;"
-  }
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
